# simpleRayTracingRender

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cc  Main.cpp  SimpleMain.cpp  cos_cubed.cpp  cos_density.cpp  intergrate_x_sq.cpp  pi.cpp  sphere_importance.cpp  sphere_plot.cpp
src/public/math/: aabb.h  color.h  math_com.h  ray.h  vec3.h
src/public/others/: perlin.h  self_stb_image.h
src/rayTrack/: main.cpp  onb.h  ray_material.h
src/simple/: aarect.h  box.h  bvh.h  camera.h  constant_medium.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  perlin.h  sphere.h  texture.h  utils.h
